@@ -1,3 +1,7 @@
+2015-02-06  Pedro Alves  <palves@redhat.com>
+
+	* linux-thread-db.c (find_new_threads_callback): Add debug output.
+
 2015-02-06  Simon Marchi  <simon.marchi@ericsson.com>
 
 	PR gdb/15678
